--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,15 @@
 <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
     <header class="masthead mb-auto">
       <div class="inner">
-        <h3 class="masthead-brand">James Harrell</h3>
+        <h3 class="masthead-brand">{{title}}</h3>
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link active" href="#">Home</a>
           <a class="nav-link" href="#">Projects</a>
-          <a class="nav-link" href="#">Github</a>
+          <a class="nav-link" href="{{github_url}}">Github</a>
           <a class="nav-link" href="#">Resume</a>
         </nav>
       </div>
     </header>
-
     <main role="main" class="inner cover">
       <h1 class="cover-heading">This website is under construction.</h1>
       <p class="lead">Website will be home to my portfolio including live demos of my projects</p>
@@ -22,7 +21,7 @@
     <footer class="mastfoot mt-auto">
       <div class="inner">
         <p>Contact me
-          <a href="mailto:james.harrell71+web@gmail.com">james.harrell71@gmail.com</a>
+          <a href="mailto:{{email}}">{{email}}</a>
       </div>
     </footer>
   </div>
