--- a/src/styles.css
+++ b/src/styles.css
@@ -25,11 +25,11 @@ a:hover {
  */
 
 html,
-
 body {
-    height: 100%;
-    background-color: #333;
-  }
+  height: 100%;
+  background-color: #333;
+}
+
 body {
   display: -ms-flexbox;
   display: -webkit-box;
@@ -37,7 +37,7 @@ body {
   -ms-flex-pack: center;
   -webkit-box-pack: center;
   justify-content: center;
-  color: rgb(0, 0, 0);
+  color: #fff;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
@@ -61,7 +61,7 @@ body {
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
-  color: rgba(255, 20, 20, 0.5);
+  color: rgba(255, 255, 255, .5);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
@@ -76,8 +76,8 @@ body {
 }
 
 .nav-masthead .active {
-  color: rgba(255, 20, 20, 0.5);
-  border-bottom-color: rgb(0, 0, 0);
+  color: #fff;
+  border-bottom-color: #fff;
 }
 
 @media (min-width: 48em) {
@@ -106,5 +106,5 @@ body {
  * Footer
  */
 .mastfoot {
-  color: rgba(255, 20, 20, 0.5);
+  color: rgba(255, 255, 255, .5);
 }
