Added base funtionality to pull a list of all my project names from the Github API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,11 @@
       <p class="lead">
         <a href="{{resume_url}}" class="btn btn-lg btn-secondary">Learn more</a>
       </p>
+
+      <p>
+        Projects:
+        <app-list-projects></app-list-projects>
+      </p>
     </main>
 
     <footer class="mastfoot mt-auto">
